# CppCNN

./: .gitignore  CMakeLists.txt  README.md
CppCNN/: CMakeLists.txt
CppCNN/include/: CIFAR10Reader.h  Conv2d.h  CrossEntropyLoss.h  Dropout.h  Flatten.h  Layer.h  LayerType.h  Linear.h  MNISTReader.h  Matrix.h  MaxPool2d.h  Metric.h  ReLU.h  Sequential.h
CppCNN/src/: CNNCIFAR10Train.cpp  CNNMNISTInference.cpp  CNNMNISTTrain.cpp  MLPMNIST.cpp
